タスクリスト

--- a/project/html/css/sass/style.scss
+++ b/project/html/css/sass/style.scss
@@ -119,6 +119,13 @@ a {
   }
 }
 
+.task-list {
+  .date {
+    background-color: aquamarine;
+    font-size: small;
+  }
+}
+
 .lesson {
   .title {
     font-size: large;
