--- a/project/html/css/style.css
+++ b/project/html/css/style.css
@@ -120,6 +120,11 @@ a {
   height: 124px;
 }
 
+.task-list .date {
+  background-color: aquamarine;
+  font-size: small;
+}
+
 .lesson .title {
   font-size: large;
 }
