授業情報にタスク表示追加

--- a/project/html/css/sass/style.scss
+++ b/project/html/css/sass/style.scss
@@ -159,6 +159,10 @@ a {
     .period:after {
       content: '限';
     }
+    .limit {
+      font-size: small;
+      color: blue;
+    }
     .memo {
       @include schedule-option;
       background-color: goldenrod;
